--- a/FazalOil/Web.config
+++ b/FazalOil/Web.config
@@ -43,7 +43,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="FazilOilDBEntities" connectionString="metadata=res://*/Models.FazilModel.csdl|res://*/Models.FazilModel.ssdl|res://*/Models.FazilModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BL8H7M5\SQLEXPRESS;initial catalog=fazil_oil_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FazilOilEntities" connectionString="metadata=res://*/Models.FazilModel.csdl|res://*/Models.FazilModel.ssdl|res://*/Models.FazilModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=faziloildb.database.windows.net;initial catalog=faziloildb;persist security info=True;user id=faziloiladmin;password=Fahad123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
